wdn/templates_5.0/scss/deprecated/deprecated.bands.scss
//////////////////////////////
// !THEME / DEPRECATED / BANDS
//////////////////////////////


.wdn-band {
  left: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
  position: relative;
  right: 50%;
  width: 100vw;
}

// Fix for nested bands
.wdn-band .wdn-band,
.wdn-band .dcf-bleed,
.dcf-bleed .wdn-band {
  left: 0;
  margin-left: 0;
  margin-right: 0;
  right: 0;
  width: auto;
}

.wdn-light-neutral-band {
  @include bg-lightest;
}

.wdn-light-triad-band {
  @include bg-lighter;
}

.wdn-light-complement-band {
  @include bg-light;
}

.wdn-inner-wrapper {
  padding: $length-em-9 $length-vw-2;
}

.wdn-inner-padding-sm {
  @include pb-8;
  @include pt-8;
}

.wdn-inner-padding-lg {
  @include pb-10;
  @include pt-10;
}

.wdn-inner-padding-no-top {
  padding-top: 0;
}

.wdn-inner-padding-no-bottom {
  padding-bottom: 0;
}

.wdn-inner-padding-none {
  padding-bottom: 0;
  padding-top: 0;
}

.wdn-stretch {
  max-width: 100%;
  width: 100%;
}

.wdn-center {
  text-align: center;
}

.unl .dcf-main-content > :last-child:not(.wdn-band) {
  // Provide adequate default vertical spacing between main content and footer.
  // If the last child uses .wdn-band, no margin will be added.
  @include mb-8;
}


@media only screen and (min-width:60em) {

  .wdn-text-band .wdn-inner-wrapper {
    margin: 0 auto;
    max-width: 37.5rem;
    padding-left: 0;
    padding-right: 0;
  }

}

